# rutube-ai-assistant

./: .gitignore  .helmignore  Chart.yaml  README.md  docker-compose.yml
backend/: .env  .env.example  Dockerfile
backend/.helm/: values.yaml
backend/server/: app.py  const.py
backend/src/: app.py
charts/: chromadb-0.1.0.tgz  rutube-backend-0.1.0.tgz  rutube-model-0.1.0.tgz  rutube-telegram-0.1.0.tgz
chromadb/: Chart.yaml
data/: concat_data.csv
model/: Dockerfile  pyproject.toml  requirements.txt
model/.helm/: Chart.yaml  values.yaml
model/.helm/templates/: configmap.yaml  deployment.yaml  service.yaml
model/server/: app.py
model/server/models/: __init__.py  index_response.py  predict_request.py  predict_response.py  test_response.py
model/server/src/: __init__.py  concat_data.csv  create_vectorstore.py  db.py  language_model.py  new_data.json  prompts.py  utils.py
notebooks/: USER_bge_1_run.ipynb  USER_bge_2_run.ipynb  USER_bge_3_run.ipynb  agent_experiments.ipynb  fusion_retrieval.ipynb  main_pipeline.ipynb  multilingual_e5_large_1_run.ipynb  multilingual_e5_large_2_run.ipynb  multilingual_e5_large_3_run.ipynb  rag_fusion.ipynb
rag/: db.py  language_model.py  main.py  prompts.py  utils.py
src/: config.py  create_vectorstore.py  db.py  language_model.py  main.py  prompts.py  utils.py
telegram/: .env  .env.example  Dockerfile  pyproject.toml
telegram/.helm/: Chart.yaml  values.yaml
telegram/.helm/templates/: deployment.yaml
telegram/src/: const.py  main.py
telegram/src/api/: fetch_prediction.py
telegram/src/models/: __init__.py
(+7 files in other folders)
