[tool.poetry]
name = "rutube-backend"
version = "0.1.0"
description = ""
authors = ["Nikita Yantsev <nikitayantsev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
