[tool.poetry]
name = "telegram"
version = "0.1.0"
description = ""
authors = ["Nikita Yantsev <yancev.no@dns-shop.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.13.1"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
